refactor: consolidate shared auth implementations into auth-domain
Move AuthenticationMethod enum, CamundaAuthenticationDelegatingHolder,
and CamundaAuthenticationDelegatingConverter from security-core,
authentication, and auth-spring into auth-domain to eliminate
duplication. The converter is now generic (<T>) with no Spring deps.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>